--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,8 @@ s
     <h1 id="titulo">Bienvenido al Desarrollo Web y JS</h1>
     <div id="contenido"></div>
     <script src="app.js"></script>
+    
+    <footer>Parche Urgente Aplicado</footer>
 
 </body>
 </html>
